@@ -19,8 +19,7 @@
                 <version>3.0.0-M3</version>
                 <configuration>
                     <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-
+                        -Xmx1024m -XX:MaxPermSize=256m
                     </argLine>
                     <!--<forkCount>2</forkCount>-->
                     <reuseForks>true</reuseForks>
